@@ -603,11 +603,11 @@ subtest 'cast' => sub {
     my $pointer2 = cast3($closure);
 
     $testname = 'static';
-    $ffi->function(string_set_closure => ['opaque'] => 'void')->call($pointer2);
-    $ffi->function(string_call_closure => ['string'] => 'void')->call("testvalue");
+    $ffi->function(string_set_closure => ['opaque'])->call($pointer2);
+    $ffi->function(string_call_closure => ['string'])->call("testvalue");
 
-    $ffi->function(string_set_closure => ['(string)->void'] => 'void')->call($pointer2);
-    $ffi->function(string_call_closure => ['string'] => 'void')->call("testvalue");
+    $ffi->function(string_set_closure => ['(string)->void'])->call($pointer2);
+    $ffi->function(string_call_closure => ['string'])->call("testvalue");
   };
 };
 
